; ModuleID = '/home/carl/AnghaBench/linux/drivers/block/extr_pktcdvd.c_pkt_set_segment_merging.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/block/extr_pktcdvd.c_pkt_set_segment_merging.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pktcdvd_device = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }
%struct.request_queue = type { i32 }

@CD_FRAMESIZE = common dso_local global i32 0, align 4
@PACKET_MERGE_SEGS = common dso_local global i32 0, align 4
@PAGE_SIZE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [35 x i8] c"cdrom max_phys_segments too small\0A\00", align 1
@EIO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pktcdvd_device*, %struct.request_queue*)* @pkt_set_segment_merging to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pkt_set_segment_merging(%struct.pktcdvd_device* %0, %struct.request_queue* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.pktcdvd_device*, align 8
  %5 = alloca %struct.request_queue*, align 8
  store %struct.pktcdvd_device* %0, %struct.pktcdvd_device** %4, align 8
  store %struct.request_queue* %1, %struct.request_queue** %5, align 8
  %6 = load %struct.pktcdvd_device*, %struct.pktcdvd_device** %4, align 8
  %7 = getelementptr inbounds %struct.pktcdvd_device, %struct.pktcdvd_device* %6, i32 0, i32 1
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = shl i32 %9, 9
  %11 = load i32, i32* @CD_FRAMESIZE, align 4
  %12 = sdiv i32 %10, %11
  %13 = load %struct.request_queue*, %struct.request_queue** %5, align 8
  %14 = call i32 @queue_max_segments(%struct.request_queue* %13)
  %15 = icmp sle i32 %12, %14
  br i1 %15, label %16, label %21

16:                                               ; preds = %2
  %17 = load i32, i32* @PACKET_MERGE_SEGS, align 4
  %18 = load %struct.pktcdvd_device*, %struct.pktcdvd_device** %4, align 8
  %19 = getelementptr inbounds %struct.pktcdvd_device, %struct.pktcdvd_device* %18, i32 0, i32 0
  %20 = call i32 @clear_bit(i32 %17, i32* %19)
  store i32 0, i32* %3, align 4
  br label %42

21:                                               ; preds = %2
  %22 = load %struct.pktcdvd_device*, %struct.pktcdvd_device** %4, align 8
  %23 = getelementptr inbounds %struct.pktcdvd_device, %struct.pktcdvd_device* %22, i32 0, i32 1
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = shl i32 %25, 9
  %27 = load i32, i32* @PAGE_SIZE, align 4
  %28 = sdiv i32 %26, %27
  %29 = load %struct.request_queue*, %struct.request_queue** %5, align 8
  %30 = call i32 @queue_max_segments(%struct.request_queue* %29)
  %31 = icmp sle i32 %28, %30
  br i1 %31, label %32, label %37

32:                                               ; preds = %21
  %33 = load i32, i32* @PACKET_MERGE_SEGS, align 4
  %34 = load %struct.pktcdvd_device*, %struct.pktcdvd_device** %4, align 8
  %35 = getelementptr inbounds %struct.pktcdvd_device, %struct.pktcdvd_device* %34, i32 0, i32 0
  %36 = call i32 @set_bit(i32 %33, i32* %35)
  store i32 0, i32* %3, align 4
  br label %42

37:                                               ; preds = %21
  %38 = load %struct.pktcdvd_device*, %struct.pktcdvd_device** %4, align 8
  %39 = call i32 @pkt_err(%struct.pktcdvd_device* %38, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0))
  %40 = load i32, i32* @EIO, align 4
  %41 = sub nsw i32 0, %40
  store i32 %41, i32* %3, align 4
  br label %42

42:                                               ; preds = %37, %32, %16
  %43 = load i32, i32* %3, align 4
  ret i32 %43
}

declare dso_local i32 @queue_max_segments(%struct.request_queue*) #1

declare dso_local i32 @clear_bit(i32, i32*) #1

declare dso_local i32 @set_bit(i32, i32*) #1

declare dso_local i32 @pkt_err(%struct.pktcdvd_device*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
